# Honeypot

./: .gitignore  drone.md
shellguard/: README.rst  install-deps.sh  pyproject.toml  requirements-output.txt  setup.py  shellguard.sh
shellguard/docker/: Dockerfile  docker-compose.yml
shellguard/etc/: shellguard.cfg.dist
shellguard/src/backend_pool/: README.md  nat.py  pool_server.py  pool_service.py  util.py
shellguard/src/backend_pool/libvirt/: backend_service.py  guest_handler.py  network_handler.py
shellguard/src/shellguard/: __init__.py
shellguard/src/shellguard/commands/: adduser.py  apt.py  awk.py  base.py  base64.py  bash.py  busybox.py  cat.py  chmod.py  chpasswd.py  crontab.py  curl.py  dd.py  dig.py  du.py  env.py  ethtool.py  find.py  finger.py  free.py  fs.py  ftpget.py  gcc.py  git.py  groups.py  ifconfig.py  iptables.py  last.py  locate.py  ls.py  lspci.py  nc.py  netstat.py  nohup.py  perl.py  ping.py  python.py  scp.py  service.py  sleep.py  (+14 more)
shellguard/src/shellguard/core/: artifact.py  auth.py  cef.py  checkers.py  config.py  credentials.py  fingerprint.py  output.py  rate_limiter.py  ttylog.py  utils.py  uuid.py
shellguard/src/shellguard/data/: __init__.py
shellguard/src/shellguard/insults/: insults.py
shellguard/src/shellguard/llm/: __init__.py  avatar.py  llm.py  protocol.py  realm.py  server.py  session.py  telnet.py
shellguard/src/shellguard/output/: README.md  abuseipdb.py  axiom.py  chinesejson.py  crashreporter.py  csirtg.py  cuckoo.py  datadog.py  discord.py  dshield.py  elasticsearch.py  graylog.py  greynoise.py  hpfeeds3.py  influx.py  jsonlog.py  localsyslog.py  malshare.py  misp.py  mongodb.py  (+18 more)
(+75 files in other folders)
